--- a/admin/package.json
+++ b/admin/package.json
@@ -37,6 +37,7 @@
     "@tinymce/tinymce-react": "^3.13.0",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
     "chartist": "^0.11.4",
     "chartist-plugin-tooltips-updated": "^0.1.4",
     "moment": "^2.29.1",
@@ -46,12 +47,15 @@
     "react-beforeunload": "^2.5.2",
     "react-bootstrap": "^2.2.1",
     "react-chartist": "^0.14.4",
+    "react-chartjs-2": "^4.0.1",
     "react-copy-to-clipboard": "^5.0.3",
+    "react-date-picker": "^8.4.0",
     "react-datetime": "^3.0.4",
     "react-dom": "^16.13.1",
     "react-github-btn": "^1.2.0",
     "react-hook-form": "^7.22.4",
     "react-live": "^2.2.3",
+    "react-multi-date-picker": "^3.3.0",
     "react-progress-bar-plus": "^1.3.1",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
